mqtt/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  ports:
    - port: 1883
      targetPort: 1883
  selector:
      app: mosquitto
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: wss
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
      app: mosquitto
  type: LoadBalancer
