mqtt/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wss
spec:
  to:
    kind: Service
    name: wss
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
